--- a/NDb/NDb.csproj
+++ b/NDb/NDb.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{A3CB901C-F90A-4579-BBA7-09A709A1FDD0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NDb2</RootNamespace>
-    <AssemblyName>NDb2</AssemblyName>
+    <RootNamespace>NDb</RootNamespace>
+    <AssemblyName>NDb</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <NuGetPackageImportStamp>e31ad790</NuGetPackageImportStamp>
